@@ -1,17 +1,16 @@
 package com.linkedin.metadata.resources.entity;
 
-import static com.linkedin.metadata.Constants.*;
-import static com.linkedin.metadata.resources.entity.ResourceUtils.*;
+import static com.datahub.authorization.AuthUtil.isAPIAuthorized;
+import static com.datahub.authorization.AuthUtil.isAPIAuthorizedEntityUrns;
+import static com.linkedin.metadata.authorization.ApiGroup.ENTITY;
+import static com.linkedin.metadata.authorization.ApiOperation.READ;
 import static com.linkedin.metadata.resources.restli.RestliConstants.*;
-import static com.linkedin.metadata.resources.restli.RestliUtils.*;
 import static com.linkedin.metadata.utils.PegasusUtils.urnToEntityName;
 
 import com.codahale.metrics.MetricRegistry;
-import com.datahub.authentication.Authentication;
 import com.datahub.authentication.AuthenticationContext;
 import com.datahub.authorization.EntitySpec;
 import com.datahub.plugins.auth.authorization.Authorizer;
-import com.google.common.collect.ImmutableList;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.entity.EntityResponse;
 import com.linkedin.metadata.authorization.PoliciesConfig;
@@ -47,7 +46,7 @@ public class EntityV2Resource extends CollectionResourceTaskTemplate<String, Ent
 
   @Inject
   @Named("entityService")
-  private EntityService _entityService;
+  private EntityService<?> _entityService;
 
   @Inject
   @Named("authorizerChain")
@@ -62,22 +61,21 @@ public class EntityV2Resource extends CollectionResourceTaskTemplate<String, Ent
       throws URISyntaxException {
     log.debug("GET V2 {}", urnStr);
     final Urn urn = Urn.createFromString(urnStr);
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
+
+    if (!isAPIAuthorizedEntityUrns(
+            AuthenticationContext.getAuthentication(),
             _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urnStr))) {
+            READ,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity " + urn);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity " + urn);
     }
     return RestliUtil.toTask(
         () -> {
           final String entityName = urnToEntityName(urn);
           final Set<String> projectedAspects =
               aspectNames == null
-                  ? getAllAspectNames(_entityService, entityName)
+                  ? _entityService.getEntityAspectNames(entityName)
                   : new HashSet<>(Arrays.asList(aspectNames));
           try {
             return _entityService.getEntityV2(entityName, urn, projectedAspects);
@@ -103,19 +101,14 @@ public class EntityV2Resource extends CollectionResourceTaskTemplate<String, Ent
     for (final String urnStr : urnStrs) {
       urns.add(Urn.createFromString(urnStr));
     }
-    Authentication auth = AuthenticationContext.getAuthentication();
-    List<java.util.Optional<EntitySpec>> resourceSpecs =
-        urns.stream()
-            .map(urn -> java.util.Optional.of(new EntitySpec(urn.getEntityType(), urn.toString())))
-            .collect(Collectors.toList());
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
+
+    if (!isAPIAuthorizedEntityUrns(
+            AuthenticationContext.getAuthentication(),
             _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            resourceSpecs)) {
+            READ,
+            urns)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entities " + urnStrs);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entities " + urnStrs);
     }
     if (urns.size() <= 0) {
       return Task.value(Collections.emptyMap());
@@ -125,7 +118,7 @@ public class EntityV2Resource extends CollectionResourceTaskTemplate<String, Ent
         () -> {
           final Set<String> projectedAspects =
               aspectNames == null
-                  ? getAllAspectNames(_entityService, entityName)
+                  ? _entityService.getEntityAspectNames(entityName)
                   : new HashSet<>(Arrays.asList(aspectNames));
           try {
             return _entityService.getEntitiesV2(entityName, urns, projectedAspects);
